# cuda_learn

./: .clang-format  CMakeLists.txt  coresCount.cu  eventRecordTime  eventRecordTime.cu  event_record_time.cu  matrix_sum_1D_GPU  matrix_sum_1D_GPU.cu  querry_GPU_info.cu  test_cuda  test_cuda.cu
tools/: common.cuh
